goal/target-maven/generated-sources/antlr4/AOLParser.java
// Generated from AOL.g4 by ANTLR 4.9.3
 package org.vnu.sme.goal.dsl.aol.parser; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AOLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		VERSION=18, BOOLEAN=19, SIGNED_NUMBER=20, STRING_LITERAL=21, IDENT=22, 
		WS=23, LINE_COMMENT=24, BLOCK_COMMENT=25;
	public static final int
		RULE_model = 0, RULE_topLevelDecl = 1, RULE_agentDecl = 2, RULE_groupInstanceDecl = 3, 
		RULE_groupItemDecl = 4, RULE_playDecl = 5, RULE_roleInstanceDecl = 6, 
		RULE_playLinkDecl = 7, RULE_entityInstanceDecl = 8, RULE_linkDecl = 9, 
		RULE_attributeValueBlock = 10, RULE_attributeValue = 11, RULE_value = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"model", "topLevelDecl", "agentDecl", "groupInstanceDecl", "groupItemDecl", 
			"playDecl", "roleInstanceDecl", "playLinkDecl", "entityInstanceDecl", 
			"linkDecl", "attributeValueBlock", "attributeValue", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'aol'", "'for'", "'{'", "'}'", "'agent'", "'as'", "','", "';'", 
			"'group'", "'play'", "'by'", "'role'", "'->'", "'entity'", "'link'", 
			"':'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "VERSION", "BOOLEAN", "SIGNED_NUMBER", 
			"STRING_LITERAL", "IDENT", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AOL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AOLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ModelContext extends ParserRuleContext {
		public TerminalNode VERSION() { return getToken(AOLParser.VERSION, 0); }
		public TerminalNode IDENT() { return getToken(AOLParser.IDENT, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(AOLParser.STRING_LITERAL, 0); }
		public TerminalNode EOF() { return getToken(AOLParser.EOF, 0); }
		public List<TopLevelDeclContext> topLevelDecl() {
			return getRuleContexts(TopLevelDeclContext.class);
		}
		public TopLevelDeclContext topLevelDecl(int i) {
			return getRuleContext(TopLevelDeclContext.class,i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).exitModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AOLVisitor ) return ((AOLVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(T__0);
			setState(27);
			match(VERSION);
			setState(28);
			match(IDENT);
			setState(29);
			match(T__1);
			setState(30);
			match(STRING_LITERAL);
			setState(31);
			match(T__2);
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__9) | (1L << T__11) | (1L << T__13) | (1L << T__14))) != 0)) {
				{
				{
				setState(32);
				topLevelDecl();
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			match(T__3);
			setState(39);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelDeclContext extends ParserRuleContext {
		public AgentDeclContext agentDecl() {
			return getRuleContext(AgentDeclContext.class,0);
		}
		public GroupInstanceDeclContext groupInstanceDecl() {
			return getRuleContext(GroupInstanceDeclContext.class,0);
		}
		public EntityInstanceDeclContext entityInstanceDecl() {
			return getRuleContext(EntityInstanceDeclContext.class,0);
		}
		public RoleInstanceDeclContext roleInstanceDecl() {
			return getRuleContext(RoleInstanceDeclContext.class,0);
		}
		public PlayLinkDeclContext playLinkDecl() {
			return getRuleContext(PlayLinkDeclContext.class,0);
		}
		public LinkDeclContext linkDecl() {
			return getRuleContext(LinkDeclContext.class,0);
		}
		public TopLevelDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).enterTopLevelDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).exitTopLevelDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AOLVisitor ) return ((AOLVisitor<? extends T>)visitor).visitTopLevelDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelDeclContext topLevelDecl() throws RecognitionException {
		TopLevelDeclContext _localctx = new TopLevelDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelDecl);
		try {
			setState(47);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				agentDecl();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				groupInstanceDecl();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 3);
				{
				setState(43);
				entityInstanceDecl();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 4);
				{
				setState(44);
				roleInstanceDecl();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 5);
				{
				setState(45);
				playLinkDecl();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 6);
				{
				setState(46);
				linkDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AgentDeclContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(AOLParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(AOLParser.IDENT, i);
		}
		public AttributeValueBlockContext attributeValueBlock() {
			return getRuleContext(AttributeValueBlockContext.class,0);
		}
		public AgentDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agentDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).enterAgentDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).exitAgentDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AOLVisitor ) return ((AOLVisitor<? extends T>)visitor).visitAgentDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AgentDeclContext agentDecl() throws RecognitionException {
		AgentDeclContext _localctx = new AgentDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_agentDecl);
		int _la;
		try {
			setState(64);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				match(T__4);
				setState(50);
				match(IDENT);
				setState(51);
				match(T__5);
				setState(52);
				match(IDENT);
				setState(53);
				attributeValueBlock();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				match(T__4);
				setState(55);
				match(IDENT);
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(56);
					match(T__6);
					setState(57);
					match(IDENT);
					}
					}
					setState(62);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(63);
				match(T__7);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupInstanceDeclContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(AOLParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(AOLParser.IDENT, i);
		}
		public List<GroupItemDeclContext> groupItemDecl() {
			return getRuleContexts(GroupItemDeclContext.class);
		}
		public GroupItemDeclContext groupItemDecl(int i) {
			return getRuleContext(GroupItemDeclContext.class,i);
		}
		public GroupInstanceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupInstanceDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).enterGroupInstanceDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).exitGroupInstanceDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AOLVisitor ) return ((AOLVisitor<? extends T>)visitor).visitGroupInstanceDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GroupInstanceDeclContext groupInstanceDecl() throws RecognitionException {
		GroupInstanceDeclContext _localctx = new GroupInstanceDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_groupInstanceDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__8);
			setState(67);
			match(IDENT);
			setState(68);
			match(T__5);
			setState(69);
			match(IDENT);
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				{
				setState(70);
				match(T__7);
				}
				break;
			case T__2:
				{
				setState(71);
				match(T__2);
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__13) | (1L << IDENT))) != 0)) {
					{
					{
					setState(72);
					groupItemDecl();
					}
					}
					setState(77);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(78);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupItemDeclContext extends ParserRuleContext {
		public GroupInstanceDeclContext groupInstanceDecl() {
			return getRuleContext(GroupInstanceDeclContext.class,0);
		}
		public PlayDeclContext playDecl() {
			return getRuleContext(PlayDeclContext.class,0);
		}
		public EntityInstanceDeclContext entityInstanceDecl() {
			return getRuleContext(EntityInstanceDeclContext.class,0);
		}
		public AttributeValueContext attributeValue() {
			return getRuleContext(AttributeValueContext.class,0);
		}
		public GroupItemDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupItemDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).enterGroupItemDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).exitGroupItemDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AOLVisitor ) return ((AOLVisitor<? extends T>)visitor).visitGroupItemDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GroupItemDeclContext groupItemDecl() throws RecognitionException {
		GroupItemDeclContext _localctx = new GroupItemDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_groupItemDecl);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				groupInstanceDecl();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				playDecl();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				entityInstanceDecl();
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				attributeValue();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlayDeclContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(AOLParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(AOLParser.IDENT, i);
		}
		public AttributeValueBlockContext attributeValueBlock() {
			return getRuleContext(AttributeValueBlockContext.class,0);
		}
		public PlayDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_playDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).enterPlayDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).exitPlayDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AOLVisitor ) return ((AOLVisitor<? extends T>)visitor).visitPlayDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlayDeclContext playDecl() throws RecognitionException {
		PlayDeclContext _localctx = new PlayDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_playDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__9);
			setState(88);
			match(IDENT);
			setState(89);
			match(T__5);
			setState(90);
			match(IDENT);
			setState(91);
			match(T__10);
			setState(92);
			match(IDENT);
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				{
				setState(93);
				match(T__7);
				}
				break;
			case T__2:
				{
				setState(94);
				attributeValueBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RoleInstanceDeclContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(AOLParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(AOLParser.IDENT, i);
		}
		public AttributeValueBlockContext attributeValueBlock() {
			return getRuleContext(AttributeValueBlockContext.class,0);
		}
		public RoleInstanceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roleInstanceDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).enterRoleInstanceDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).exitRoleInstanceDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AOLVisitor ) return ((AOLVisitor<? extends T>)visitor).visitRoleInstanceDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RoleInstanceDeclContext roleInstanceDecl() throws RecognitionException {
		RoleInstanceDeclContext _localctx = new RoleInstanceDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_roleInstanceDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__11);
			setState(98);
			match(IDENT);
			setState(99);
			match(T__5);
			setState(100);
			match(IDENT);
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				{
				setState(101);
				match(T__7);
				}
				break;
			case T__2:
				{
				setState(102);
				attributeValueBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlayLinkDeclContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(AOLParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(AOLParser.IDENT, i);
		}
		public PlayLinkDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_playLinkDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).enterPlayLinkDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).exitPlayLinkDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AOLVisitor ) return ((AOLVisitor<? extends T>)visitor).visitPlayLinkDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlayLinkDeclContext playLinkDecl() throws RecognitionException {
		PlayLinkDeclContext _localctx = new PlayLinkDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_playLinkDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__9);
			setState(106);
			match(IDENT);
			setState(107);
			match(T__12);
			setState(108);
			match(IDENT);
			setState(109);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityInstanceDeclContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(AOLParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(AOLParser.IDENT, i);
		}
		public AttributeValueBlockContext attributeValueBlock() {
			return getRuleContext(AttributeValueBlockContext.class,0);
		}
		public EntityInstanceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entityInstanceDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).enterEntityInstanceDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).exitEntityInstanceDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AOLVisitor ) return ((AOLVisitor<? extends T>)visitor).visitEntityInstanceDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityInstanceDeclContext entityInstanceDecl() throws RecognitionException {
		EntityInstanceDeclContext _localctx = new EntityInstanceDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_entityInstanceDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__13);
			setState(112);
			match(IDENT);
			setState(113);
			match(T__5);
			setState(114);
			match(IDENT);
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				{
				setState(115);
				match(T__7);
				}
				break;
			case T__2:
				{
				setState(116);
				attributeValueBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinkDeclContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(AOLParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(AOLParser.IDENT, i);
		}
		public LinkDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linkDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).enterLinkDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).exitLinkDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AOLVisitor ) return ((AOLVisitor<? extends T>)visitor).visitLinkDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinkDeclContext linkDecl() throws RecognitionException {
		LinkDeclContext _localctx = new LinkDeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_linkDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(T__14);
			setState(120);
			match(IDENT);
			setState(121);
			match(T__15);
			setState(122);
			match(IDENT);
			setState(123);
			match(T__12);
			setState(124);
			match(IDENT);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(125);
				match(T__6);
				setState(126);
				match(IDENT);
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeValueBlockContext extends ParserRuleContext {
		public List<AttributeValueContext> attributeValue() {
			return getRuleContexts(AttributeValueContext.class);
		}
		public AttributeValueContext attributeValue(int i) {
			return getRuleContext(AttributeValueContext.class,i);
		}
		public AttributeValueBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeValueBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).enterAttributeValueBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).exitAttributeValueBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AOLVisitor ) return ((AOLVisitor<? extends T>)visitor).visitAttributeValueBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeValueBlockContext attributeValueBlock() throws RecognitionException {
		AttributeValueBlockContext _localctx = new AttributeValueBlockContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_attributeValueBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(T__2);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(135);
				attributeValue();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeValueContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(AOLParser.IDENT, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public AttributeValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).enterAttributeValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AOLListener ) ((AOLListener)listener).exitAttributeValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AOLVisitor ) return ((AOLVisitor<? extends T>)visitor).visitAttributeValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeValueContext attributeValue() throws RecognitionException {
		AttributeValueContext _localctx = new AttributeValueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_attributeValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(IDENT);
			setState(144);
			match(T__16);
			setState(145);
			value();
			setState(146);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
